tests/paczka1/fuzzy1/64574600.err
Error in line 4: iLe8DlZ A100 35,1
Error in line 9: r6xJV A100 -1,4
Error in line 5: lnSKn2oa8p A660 26,1
Error in line 3: r6xJV A100 21,2
Error in line 12: r6xJV A660 8,7
Error in line 15: lnSKn2oa8p A100 94,57
Error in line 21: r6xJV 319 321,4
Error in line 14: r6xJV S319 94,8
Error in line 37: r6xJV A660 5,7
